--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@supabase/supabase-js": "^2.75.0",
     "cloudinary": "^2.7.0",
     "jsqr": "^1.4.0",
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "vercel": "^48.4.0",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
