--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(auth)/login/page.tsx.backup", "src/app/page.tsx.backup", "next.config.js"],
   "exclude": ["node_modules"]
 }
