--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "type-check": "^0.4.0",
     "vercel": "^48.4.0",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
