adding timestampz jam, tanggal, lokasi

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,3 @@
-// ===================================
-// 📁 tsconfig.json
-// ===================================
-
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -9,6 +5,10 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -27,6 +27,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(auth)/login/page.tsx.backup", "src/app/page.tsx.backup", "next.config.js"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", "**/*.backup"]
 }
