--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "analyze": "ANALYZE=true next build",
-    "build:analyze": "cross-env ANALYZE=true next build",
-    "build:production": "next build && next export"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "clean": "rm -rf .next node_modules",
+    "fresh-install": "npm run clean && npm install"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
@@ -17,11 +19,7 @@
     "jsqr": "^1.4.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "type-check": "^0.4.0",
-    "vercel": "^48.4.0",
-    "zod": "^3.25.76",
-    "zustand": "^4.5.7"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.5.5",
