--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "fresh-install": "npm run clean && npm install"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.75.0",
     "cloudinary": "^2.7.0",
+    "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.5.5",
@@ -33,6 +36,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.1.1",
     "tailwindcss": "^4.1.14",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   }
 }
