--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
     "next": "^15.5.6",
+    "node": "^25.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-scanner": "^1.0.0-alpha.11"
