--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,5 +62,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/setup/page.modulecss", "src/presentation/hooks/useInspection.ts.backup"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "backup-*","node_modules"]
 }
