--- a/package.json
+++ b/package.json
@@ -7,93 +7,87 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
-    
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    
     "clean": "rm -rf .next node_modules/.cache",
     "clean:full": "rm -rf .next node_modules package-lock.json && npm install",
-    
     "supabase:login": "npx supabase login",
     "supabase:init": "npx supabase init",
     "supabase:start": "npx supabase start",
     "supabase:stop": "npx supabase stop",
     "supabase:status": "npx supabase status",
-    
     "db:generate": "npx supabase gen types typescript --local > src/core/types/supabase.types.ts",
-    "db:generate:prod": "npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/core/types/supabase.types.ts",
+    "db:generate:prod": "npx supabase gen types typescript --project-id zznhsfsvankfewasstel > src/core/types/supabase.types.ts",
     "db:push": "npx supabase db push",
     "db:reset": "npx supabase db reset",
     "db:diff": "npx supabase db diff",
     "db:dump": "npx supabase db dump",
     "db:pull": "npx supabase db pull",
-    
+    "db:pull:prod": "npx supabase db pull --project-id zznhsfsvankfewasstel",
+    "db:types": "npx supabase gen types typescript --project-id zznhsfsvankfewasstel > src/core/types/supabase.types.ts",
+    "db:types:prod": "npx supabase gen types typescript --project-id zznhsfsvankfewasstel > src/core/types/supabase.types.ts",
     "migrations:new": "npx supabase migration new",
     "migrations:list": "npx supabase migration list",
     "migrations:up": "npx supabase migration up",
-    
     "studio": "npx supabase studio",
     "functions:serve": "npx supabase functions serve",
-    
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    
     "prepare": "husky install",
-    
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    
     "analyze": "cross-env ANALYZE=true next build",
-    
     "docker:build": "docker build -t toilet-monitoring .",
     "docker:run": "docker run -p 3000:3000 toilet-monitoring"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@supabase/realtime-js": "^2.8.2",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/realtime-js": "^2.8.2",
-    "lucide-react": "^0.294.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "date-fns": "^2.30.0",
     "react-hook-form": "^7.47.0",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "sonner": "^1.0.0"
+    "sonner": "^1.0.0",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.8.0",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "14.0.0",
-    "prettier": "^3.0.0",
-    "jest": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.0",
-    "@storybook/react": "^7.5.0",
+    "@next/bundle-analyzer": "^14.0.0",
     "@storybook/addon-essentials": "^7.5.0",
     "@storybook/addon-interactions": "^7.5.0",
     "@storybook/addon-links": "^7.5.0",
     "@storybook/blocks": "^7.5.0",
-    "storybook": "^7.5.0",
-    "@next/bundle-analyzer": "^14.0.0",
-    "cross-env": "^7.0.3",
+    "@storybook/react": "^7.5.0",
+    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "14.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.0.0",
     "postcss": "^8.4.31",
+    "postcss-import": "^16.1.1",
+    "prettier": "^3.0.0",
+    "storybook": "^7.5.0",
+    "supabase": "^1.123.3",
     "tailwindcss": "^3.3.5",
-    "supabase": "^1.123.3"
+    "typescript": "^5.2.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,json,css,md}": [
