--- a/package.json
+++ b/package.json
@@ -45,12 +45,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/realtime-js": "^2.8.2",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.38.0",
+    "@supabase/supabase-js": "^2.76.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.3",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.294.0",
     "next": "14.0.0",
     "react": "18.2.0",
